test/lhsTypeAnnotation1.slq

def main() {
    x:ğ”¹ := 42; /// error
    x = x || 1;
}
